Исправлен User и документация к нему
